# markovtrace

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
spikes/E2_shapley_sampling/: RECOMMENDATION.md  notebook.ipynb  prompts.py
spikes/E2_shapley_sampling/helpers/: anthropic_client.py  kernel_shap.py  metrics.py  shapley.py
src/markovtrace/: __init__.py  _version.py
src/markovtrace/eval/: __init__.py
tests/: test_smoke.py
